# Earthquake_summer_practice

./: Egor.txt  README.md  pyproject.toml  start.py  test.txt
app/: crud.py  database.py  db_wiring.py  main.py  models.py  schemas.py  test_crud.py  test_main.py
app/db/: eq_monitor.db  eq_monitor.db-journal
app/tests/: tests.py
app/users/user@example.com/2023-06-24/: pra.txt
earthquake/: LICENSE  Makefile  Pipfile  README.md  setup.py
earthquake/app/: earthquake.py
earthquake/earthquake.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
earthquake/eq.egg-info/: PKG-INFO  SOURCES.txt
