[tool.poetry]
name = "app"
version = "0.1.0"
description = "Data product to study earthquake effects"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standart"], version = "^0.97.0"}
uvicorn = {extras = ["standart"], version = "^0.22.0"}
pydantic = {extras = ["email"], version = "^1.10.9"}
sqlalchemy = {extras = ["standart"], version = "^2.0.16"}
python-multipart = {extras = ["standart"], version = "^0.0.6"}
pytest = {extras = ["standart"], version = "^7.4.0"}
pytest-cov = "^4.1.0"
loguru = {extras = ["standart"], version = "^0.7.0"}
httpx = {extras = ["standart"], version = "^0.24.1"}
h5py = "^3.9.0"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
